--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev": "node src/index.js"
   },
   "dependencies": {
-    "apollo-server": "^3.1.2",
+    "apollo-server-express": "^3.1.2",
+    "express": "^4.17.1",
     "graphql": "^15.5.1",
     "mongoose": "^5.13.7"
   }
